Update dozer to 6.5.2